roles/openshift-apps/greenwave/files/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: greenwave-web
  labels:
    app: greenwave
spec:
  selector:
    app: greenwave
    service: web
  ports:
  - name: web
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fedmsg-consumers
  labels:
    app: greenwave
spec:
  selector:
    app: greenwave
    service: fedmsg-consumers
  ports:
  - name: fedmsg-consumers
    port: 8081
    targetPort: 8081
