roles/openshift-apps/greenwave/files/route.yml
apiVersion: v1
kind: Route
metadata:
  name: greenwave-web
  labels:
    app: greenwave
spec:
  #host: greenwave.stg.fedoraproject.org
  port:
    targetPort: web
  to:
    kind: Service
    name: greenwave-web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
